test/custom/inference/good/coreml_partial_quantification.mlt
let ['a] f = fun (x : 'a) -> fun g -> g x
