test/custom/inference/bad/typeclass_big_predicate.mlt
class H 'a { h : 'a }
type 'a thing = Thing of 'a
let ['a] [H ('a thing)] f = fun (x : 'a) -> x
